@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.16-4
-Date: 2007/08/31
+Version: 0.16-5
+Date: 2007/09/07
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
@@ -14,4 +14,4 @@ Enhances: chron
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Fri Aug 31 15:44:09 2007; dsarkar
+Packaged: Fri Sep  7 17:28:52 2007; dsarkar
